@@ -4,8 +4,10 @@ drlm (2.4.11) stable release; urgency=high
   * Bugfix in web, holded backups are not shown
   * New install script
   * Bugfix in installclient adding network interface
+  * Check client shell before installclient
+  * Bugfix in DRLM pre and post runbackup script
 
- -- Pau Roura <pau@brainupdaters.net>  Thu, 07 Dec 2023 00:00:00 +0100
+ -- Pau Roura <pau@brainupdaters.net>  Tue, 30 Jan 2023 00:00:00 +0100
 
 drlm (2.4.10) stable release; urgency=high
   * Bugfix in installclient tunnig_rear function
